--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Mobile Menu</title>
-    <link rel="stylesheet" href="qris.io/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,11 +101,11 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
-    <script src="assets/js/dom-to-image.js"></script>
+    <script src="/assets/js/dom-to-image.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/js/core.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="/assets/js/core.js"></script>
+    <script src="/assets/js/app.js"></script>
 </body>
 
 </html>
