--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
-    <script src="/assets/js/dom-to-image.js"></script>
+    <script src="/qris.io/assets/js/dom-to-image.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/assets/js/core.js"></script>
-    <script src="/assets/js/app.js"></script>
+    <script src="/qris.io/assets/js/core.js"></script>
+    <script src="/qris.io/assets/js/app.js"></script>
 </body>
 
 </html>
