--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="swiper-content">
-                        <img src="/assets/images/add-file.png" style="width:60%; height: auto;" alt="sd">
+                        <img src="/qris.io/assets/images/add-file.png" style="width:60%; height: auto;" alt="sd">
 
                         <button onclick="copyText('result', 'copy-btn')" class="copy-btn" id="copy-btn"><i
                                 class="fa fa-clone"></i></button>
