--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Mobile Menu</title>
-<!--     <base href="https://emptyjardeveloper.github.io/qris.io/" /> -->
+    <!--     <base href="https://emptyjardeveloper.github.io/qris.io/" /> -->
     <link rel="stylesheet" href="/qris.io/assets/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,15 +33,67 @@
                         <button onclick="copyText('result', 'copy-btn')" class="copy-btn" id="copy-btn"><i
                                 class="fa fa-clone"></i></button>
 
-                        <div contentEditable="false" id="result" class="qrResult" readonly>Waiting for content upload...
+                        <div contentEditable="false" id="result" class="qrResult" readonly>Waiting
+                            for content upload...
                         </div>
                     </div>
 
-                    <input type="file" id="fileInput" accept="image/*" class="flying-button">
+                    <input type="file" onchange="qrReader('result')" accept="image/*" class="flying-button">
                 </div>
 
                 <div class="swiper-slide">
-                    <p>Page 2 Content</p>
+                    <div class="swiper-content">
+                        <div class="upload-container">
+                            <div class="wrapper">
+                                <h4>Identify QRIS - Master</h4>
+                                <label for="file-upload" class="custom-file-upload">
+                                    <i class="fas fa-cloud-upload-alt"></i> Upload Files
+                                </label>
+                                <input id="file-upload" type="file" onchange="qrMergerReader('master-container')"
+                                    accept="image/*">
+                            </div>
+
+                            <div id="parse" class="alert-box">
+                                <i id="alert-icon" class="fa"></i>
+                                <span id="alert-text">Listening...</span>
+                            </div>
+                        </div>
+
+                        <div class="border" id="border"></div>
+
+                        <div class="upload-container" id="client-qr-container">
+                            <div class="wrapper">
+                                <h4>Identify QRIS - Client</h4>
+                                <label for="client-upload-merge" class="custom-file-upload">
+                                    <i class="fas fa-cloud-upload-alt"></i> Upload Files
+                                </label>
+                                <input id="client-upload-merge" onchange="qrClientReader()" type="file"
+                                    accept="image/*">
+                            </div>
+
+                            <div id="client-status-alert" class="alert-box">
+                                <i id="alert-icon-client" class="fa"></i>
+                                <span id="alert-text-client">Listening...</span>
+                            </div>
+                        </div>
+
+
+                        <button id="mergeBtn">Merge QR Data</button>
+
+                        <div id="modal-merge" class="modal">
+                            <div class="modal-content" id="qrImage">
+                                <span class="close-merge">&times;</span>
+
+                                <div class="image-placeholder" id="qrContainer">
+                                    <span id="unique-placeholder-merge"></span>
+                                    <img id="mergeImg">
+                                    <span id="title-placeholder-merge"></span>
+                                </div>
+
+                                <button id="download">Download Image</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="swiper-slide">
@@ -75,7 +127,7 @@
                             <div class="form-group">
                                 <label for="sourceCode">QR Source Code</label>
                                 <div contentEditable="true" name="sourceCode" class="checksumResult" id="sourceCode">
-                                </div>
+                                    Data</div>
                             </div>
                             <button id="drawQr" class="draw-btn">Draw QR</button>
 
