Change generator template

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <div class="form-group">
                                 <label for="sourceCode">QR Source Code</label>
                                 <div contenteditable="true" name="sourceCode" class="checksumResult" id="sourceCode">
-                                    Data</div>
+                                </div>
                             </div>
                             <button id="drawQr" class="draw-btn">Draw QR</button>
 
@@ -158,9 +158,9 @@
                                     <span class="close">&times;</span>
 
                                     <div class="image-placeholder" id="qrContainer">
-                                        <span id="title-placeholder"></span>
                                         <img id="img" />
-                                        <span id="unique-placeholder"></span>
+                                        <span id="title-placeholder"></span>
+                                        <!-- <span id="unique-placeholder"></span> -->
                                     </div>
 
                                     <button id="download">Download Image</button>
